fix alignment

--- a/app/src/app/views/contributors-page/contributors-page.component.scss
+++ b/app/src/app/views/contributors-page/contributors-page.component.scss
@@ -7,6 +7,6 @@
     }
 }
 
-.contributors-dialog {
+.contributors-dialog .align-center {
     text-align: center;
 }
